# tree-sitter-nvim

./: Cargo.toml
src/: main.rs
